# telegram_bot_project

./: .flake8  .gitignore  amvera.yml  pyproject.toml  requirements.txt
admin_panel/: .env.example  manage.py
admin_panel/app/: admin.py  apps.py  models.py
admin_panel/app/migrations/: 0001_initial.py  0002_alter_telegramuser_first_name.py  0002_order_status_payment.py
admin_panel/config/: settings.py  urls.py
admin_panel/users/: admin.py  apps.py  models.py
admin_panel/users/management/commands/: csu.py
admin_panel/users/migrations/: 0001_initial.py
bot/: .env.example
bot/src/: django_setup.py  main.py
bot/src/config/: settings.py
bot/src/handlers/: start.py  users.py
bot/src/keyboards/: main_menu.py
bot/src/middlewares/: logging_logs.py
bot/src/payment_yookassa/: payment_handler.py
bot/src/services/: database.py  states.py  utils.py
