[tool.poetry]
name = "telegram-bot-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
django = "^5.2.1"
asyncpg-lite = "^0.3.1.3"
aiogram = "^3.20.0.post0"
pillow = "^11.2.1"
psycopg2-binary = "^2.9.10"
httpx = "^0.28.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'  # Форматировать только .py и .pyi файлы
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.mypy_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3  # Красивое оформление многострочных импортов
